Add new `Lint/IdentityComparison` cop
Follow https://github.com/rubocop-hq/ruby-style-guide/pull/835.

This PR adds new `Lint/IdentityComparison` cop.

```ruby
# bad
foo.object_id == bar.object_id

# good
foo.equal?(bar)
```

The cop prefers `equal?` over `==` when comparing `object_id`.
`Object#equal?` is provided to compare objects for identity, and in contrast
`Object#==` is provided for the purpose of doing value comparison.

--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -216,6 +216,7 @@ In the following section you find all available cops:
 * xref:cops_lint.adoc#lintfloatoutofrange[Lint/FloatOutOfRange]
 * xref:cops_lint.adoc#lintformatparametermismatch[Lint/FormatParameterMismatch]
 * xref:cops_lint.adoc#lintheredocmethodcallposition[Lint/HeredocMethodCallPosition]
+* xref:cops_lint.adoc#lintidentitycomparison[Lint/IdentityComparison]
 * xref:cops_lint.adoc#lintimplicitstringconcatenation[Lint/ImplicitStringConcatenation]
 * xref:cops_lint.adoc#lintineffectiveaccessmodifier[Lint/IneffectiveAccessModifier]
 * xref:cops_lint.adoc#lintinheritexception[Lint/InheritException]
