[Fix #8582] Add new `Layout/BeginEndAlignment` cop
Fixes #8582.

This PR adds `Layout/BeginEndAlignment` cop to solve the issue.

The following is an example:

```ruby
% cat example.rb
foo = bar rescue "{}"
```

## Before

The alignment was misaligned because `begin` was not awake.

```ruby
% rubocop -a example.rb
(snip)

% cat example.rb
foo =
  begin
         bar
  rescue StandardError
    '{}'
       end
```

## After

Awakened by `begin`, so aligned.

```ruby
% rubocop -a example.rb
(snip)

% cat example.rb
foo =
  begin
    bar
  rescue StandardError
    '{}'
  end
```

I was first planning to add `begin` processing to `Layout/EndAlignment` cop.
However, `Layout/EndAlignment` cop with `EnforcedStyleAlignWith: keyword (default)`
was not preferred code in the following:

```ruby
longlonglonglonglonglonglonglonglong ||= begin
                                           do_something
                                         end
```

This style has been found to have very long line length with RuboCop's own code.

Therefore, since this PR would like to use `EnforcedStyleAlignWith: start_of_line`
by default against `foo ||= begin`, this PR added the new cop.

```ruby
# EnforcedStyleAlignWith: start_of_line (default)
longlonglonglonglonglonglonglonglong ||= begin
  do_something
end
```

This solution allows configuration with minimal impact on existing code.

It is configurable if user want to align to `begin`.

```ruby
# EnforcedStyleAlignWith: begin
longlonglonglonglonglonglonglonglong ||= begin
                                           do_something
                                         end
```

This PR also makes `Layout/RescueEnsureAlignment` cop aware of new
`Layout/BeginEndAlignment` cop's config to align `rescue` indents.

--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -91,6 +91,7 @@ In the following section you find all available cops:
 * xref:cops_layout.adoc#layoutargumentalignment[Layout/ArgumentAlignment]
 * xref:cops_layout.adoc#layoutarrayalignment[Layout/ArrayAlignment]
 * xref:cops_layout.adoc#layoutassignmentindentation[Layout/AssignmentIndentation]
+* xref:cops_layout.adoc#layoutbeginendalignment[Layout/BeginEndAlignment]
 * xref:cops_layout.adoc#layoutblockalignment[Layout/BlockAlignment]
 * xref:cops_layout.adoc#layoutblockendnewline[Layout/BlockEndNewline]
 * xref:cops_layout.adoc#layoutcaseindentation[Layout/CaseIndentation]
