[Fix #8617] Style/HashAsLastArrayItem no longer flags hashes if all elements in an array are hashes.

--- a/docs/modules/ROOT/pages/cops_style.adoc
+++ b/docs/modules/ROOT/pages/cops_style.adoc
@@ -3691,6 +3691,9 @@ ok
 Checks for presence or absence of braces around hash literal as a last
 array item depending on configuration.
 
+NOTE: This cop will ignore arrays where all items are hashes, regardless of
+EnforcedStyle.
+
 === Examples
 
 ==== EnforcedStyle: braces (default)
@@ -3702,6 +3705,9 @@ array item depending on configuration.
 
 # good
 [1, 2, { one: 1, two: 2 }]
+
+# good
+[{ one: 1 }, { two: 2 }]
 ----
 
 ==== EnforcedStyle: no_braces
@@ -3713,6 +3719,9 @@ array item depending on configuration.
 
 # good
 [1, 2, one: 1, two: 2]
+
+# good
+[{ one: 1 }, { two: 2 }]
 ----
 
 === Configurable attributes
