Fix `Lint/UselessMethodDefinition` to not register an offense when method definition includes optional arguments

--- a/docs/modules/ROOT/pages/cops_lint.adoc
+++ b/docs/modules/ROOT/pages/cops_lint.adoc
@@ -4621,6 +4621,11 @@ def method
   super
 end
 
+# good - with default arguments
+def initialize(x = Object.new)
+  super
+end
+
 # good
 def initialize
   initialize_internals
