Fix an incorrect auto-correct for `Style/MultilineTernaryOperator`
This PR fixes the following incorrect auto-correct for
`Style/MultilineTernaryOperator` when returning
a multiline ternary operator expression.

```console
% cat example.rb
return distance_in_minutes == 0 ?
       locale.t(:less_than_x_minutes, count: 1) :
       locale.t(:x_minutes, count: distance_in_minutes)

% bundle exec rubocop -a --only Style/MultilineTernaryOperator
(snip)

Inspecting 2 files
C.

Offenses:

example.rb:1:8: C: [Corrected] Style/MultilineTernaryOperator: Avoid
multi-line ternary operators, use if or unless instead.
return distance_in_minutes == 0 ? ...
       ^^^^^^^^^^^^^^^^^^^^^^^^^^

2 files inspected, 1 offense detected, 1 offense corrected

% cat example.rb
return if distance_in_minutes == 0
  locale.t(:less_than_x_minutes, count: 1)
else
  locale.t(:x_minutes, count: distance_in_minutes)
end

% ruby -c example.rb
example.rb:3: syntax error, unexpected `else', expecting end-of-input
```

I found it with the following code.
https://github.com/rails/rails/blob/v6.0.3.2/actionview/lib/action_view/helpers/date_helper.rb#L109-L111

--- a/docs/modules/ROOT/pages/cops_style.adoc
+++ b/docs/modules/ROOT/pages/cops_style.adoc
@@ -5757,6 +5757,9 @@ end
 
 This cop checks for multi-line ternary op expressions.
 
+NOTE: `return if ... else ... end` is syntax error. If `return` is used before
+multiline ternary operator expression, it cannot be auto-corrected.
+
 === Examples
 
 [source,ruby]
