[Fix #8500] Add `in?` to AllowedMethods for `Lint/SafeNavigationChain` cop
Closes https://github.com/rubocop-hq/rubocop/issues/8500

--- a/docs/modules/ROOT/pages/cops_lint.adoc
+++ b/docs/modules/ROOT/pages/cops_lint.adoc
@@ -3193,7 +3193,7 @@ x&.foo || bar
 | Name | Default value | Configurable values
 
 | AllowedMethods
-| `present?`, `blank?`, `presence`, `try`, `try!`
+| `present?`, `blank?`, `presence`, `try`, `try!`, `in?`
 | Array
 |===
 
