[Fixes #8626] Fix false negatives for `Lint/UselessMethodDefinition`.
Note that not calling `super` at all from `initialize` is left
to `Lint/MissingSuper` cop.

--- a/docs/modules/ROOT/pages/cops_lint.adoc
+++ b/docs/modules/ROOT/pages/cops_lint.adoc
@@ -4615,6 +4615,7 @@ an empty constructor just overrides the parent constructor, which is bad anyway.
 ----
 # bad
 def initialize
+  super
 end
 
 def method
@@ -4628,32 +4629,12 @@ end
 
 # good
 def initialize
+  super
   initialize_internals
 end
 
-def method
-  super
-  do_something_else
-end
-----
-
-==== AllowComments: true (default)
-
-[source,ruby]
-----
-# good
-def initialize
-  # Comment.
-end
-----
-
-==== AllowComments: false
-
-[source,ruby]
-----
-# bad
-def initialize
-  # Comment.
+def method(*args)
+  super(:extra_arg, *args)
 end
 ----
 
