Add new cop `Lint/UselessTimes`.
This cop looks for pointless uses of `Integer#times` and replaces or removes them as necessary. When the integer is <= 0, the block will never be yielded to, so the entire thing can be removed. When the integer is 1, the block will only ever yield once, so the `1.times` call can be replaced with the block body.

--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -281,6 +281,7 @@ In the following section you find all available cops:
 * xref:cops_lint.adoc#lintuselesselsewithoutrescue[Lint/UselessElseWithoutRescue]
 * xref:cops_lint.adoc#lintuselessmethoddefinition[Lint/UselessMethodDefinition]
 * xref:cops_lint.adoc#lintuselesssettercall[Lint/UselessSetterCall]
+* xref:cops_lint.adoc#lintuselesstimes[Lint/UselessTimes]
 * xref:cops_lint.adoc#lintvoid[Lint/Void]
 
 === Department xref:cops_metrics.adoc[Metrics]
