--- a/docs/modules/ROOT/pages/cops_lint.adoc
+++ b/docs/modules/ROOT/pages/cops_lint.adoc
@@ -4722,6 +4722,40 @@ def something
 end
 ----
 
+== Lint/UselessTimes
+
+|===
+| Enabled by default | Safe | Supports autocorrection | VersionAdded | VersionChanged
+
+| Pending
+| No
+| Yes (Unsafe)
+| 0.91
+| -
+|===
+
+This cop checks for uses of `Integer#times` that will never yield
+(when the integer <= 0) or that will only ever yield once
+(`1.times`).
+
+This cop is marked as unsafe as `times` returns its receiver, which
+is *usually* OK, but might change behavior.
+
+=== Examples
+
+[source,ruby]
+----
+# bad
+-5.times { do_something }
+0.times { do_something }
+1.times { do_something  }
+1.times { |i| do_something(i) }
+
+# good
+do_something
+do_something(1)
+----
+
 == Lint/Void
 
 |===
