Add new Lint/ConstantDefinitionInBlock cop
Constants defined within a block are added to the current lexical scope,
which means the block has no effect on where the constant is defined or
how it can be accessed. I often see constants defined inside Rake tasks
or RSpec `describe` blocks where the intent was clearly for them to be
scoped to the block, but which actually leak into the top-level scope.

--- a/docs/modules/ROOT/pages/cops.adoc
+++ b/docs/modules/ROOT/pages/cops.adoc
@@ -190,6 +190,7 @@ In the following section you find all available cops:
 * xref:cops_lint.adoc#lintbinaryoperatorwithidenticaloperands[Lint/BinaryOperatorWithIdenticalOperands]
 * xref:cops_lint.adoc#lintbooleansymbol[Lint/BooleanSymbol]
 * xref:cops_lint.adoc#lintcircularargumentreference[Lint/CircularArgumentReference]
+* xref:cops_lint.adoc#lintconstantdefinitioninblock[Lint/ConstantDefinitionInBlock]
 * xref:cops_lint.adoc#lintconstantresolution[Lint/ConstantResolution]
 * xref:cops_lint.adoc#lintdebugger[Lint/Debugger]
 * xref:cops_lint.adoc#lintdeprecatedclassmethods[Lint/DeprecatedClassMethods]
