Add style guide link for Lint/ConstantDefinitionInBlock

--- a/docs/modules/ROOT/pages/cops_lint.adoc
+++ b/docs/modules/ROOT/pages/cops_lint.adoc
@@ -393,6 +393,10 @@ describe 'making a request' do
 end
 ----
 
+=== References
+
+* https://rubystyle.guide#no-constant-definition-in-block
+
 == Lint/ConstantResolution
 
 |===
